# flatten_nested

./: LICENSE  README.md  pyproject.toml
flatten_nested/: __init__.py  exceptions.py  flattener.py  utils.py
flatten_nested/tests/: test_flattener.py
