[tool.poetry]
name = "flatten-nested"
version = "0.1.0"
description = "A Python package to flatten nested data structures"
authors = ["Sathish Kumar K <sathishpatel415@gmail.com>"]
readme = "README.md"
packages = [{include = "flatten_nested"}]
homepage = "https://github.com/sathishpatel415/flatten-nested"
repository = "https://github.com/sathishpatel415/flatten-nested"
documentation = "https://github.com/sathishpatel415/flatten-nested#readme"
keywords = ["flatten", "nested", "list", "dict", "tuple", "set"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=flatten_nested --cov-report=term-missing"